@@ -98,4 +98,36 @@ class ApiContactFieldControllerTest extends ApiTestCase
             ],
         ]);
     }
+
+    public function test_contact_query_internationalphone()
+    {
+        $user = $this->signin();
+        $contact = factory(Contact::class)->create([
+            'account_id' => $user->account->id,
+        ]);
+        $field = factory(ContactFieldType::class)->create([
+            'account_id' => $user->account_id,
+            'name' => 'Phone',
+            'protocol' => 'tel:',
+            'type' => 'phone',
+            ]);
+        $contactField = factory(ContactField::class)->create([
+            'contact_id' => $contact->id,
+            'account_id' => $user->account_id,
+            'contact_field_type_id' => $field->id,
+            'data' => '+447007007007',
+        ]);
+
+        $response = $this->json('GET', '/api/contacts?query=Phone:%2B447007007007');
+
+        $response->assertStatus(200);
+        $response->assertJsonFragment([
+                'id' => $contact->id,
+                'first_name' => 'John',
+                'last_name' => 'Doe',
+                'account' => [
+                    'id' => $user->account->id,
+                ],
+        ]);
+    }
 }
